tests/errors/octal_number.joyeer
var i = 01239
var i = 09
var i = 08